# pokedex-api

./: .coverage  .gitignore  README.md  SECURITY.md  pyproject.toml  pytest.ini  requirements.txt
app/: auth.py  config.py  database.py  dependencies.py  limiter.py  logging_config.py  main.py  models.py
app/routers/: __init__.py  auth.py  pokedex.py  pokemon.py  teams.py
app/services/: pokeapi_service.py
tests/: conftest.py  test_auth.py  test_main_extra.py  test_pokeapi_service.py  test_pokedex.py  test_pokedex_extra.py  test_pokemon_router.py  test_teams_router.py
