[project]
name = "pokedex-api"
version = "0.1.0"
description = "Pokedex API REST UFV"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.119.0",
    "uvicorn>=0.37.0",
    "sqlmodel>=0.0.27",
    "httpx>=0.28.1",
    "python-jose>=3.3.0",
    "python-multipart>=0.0.20",
    "passlib[bcrypt]>=1.7.4",
    "pytest>=8.4.2",
    "pydantic>=2.9.0",
]
