[project]
name = "pokedex-api"
version = "1.0.0"
description = "API REST de Pokedex UFV"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pytest>=8.4.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.20",
    "requests>=2.32.5",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.37.0",
    "pydantic-settings>=2.0.3",
    "reportlab",
    "pytest-cov>=7.0.0",
    "pytest-asyncio>=1.3.0",
]
